# PsiloQA

./: .gitignore  Makefile  README.md  env.example  pyproject.toml  train_script.py
data/qa/: output.jsonl
data/raw/: output.jsonl
evaluation/: 1_annotator.csv  2_annotator.csv  3_annotator.csv  consistency_tests.ipynb  gpt.csv
psilo/: cli.py
psilo/dataset/: annotator.py  cli.py  filter_samples.py  generate_qa.py  settings.py  wiki_contexts.py
psilo/dataset/answer_generator/: batching.py  registry.py  runner.py
psilo/dataset/answer_generator/models/: __init__.py  apriel.py  bloom_de.py  bloom_zh_3b.py  croissant.py  eurollm.py  falcon.py  gemma.py  llama_finnish.py  mistral.py  mistral_hermes.py  modello.py  neurona.py  occiglot.py  phi_mini.py  projectindus.py  pythia.py  qwen2_7b.py  qwen_2_5_3b.py  salamandra.py  sarvam.py  seallm.py  smollm.py  tiny_llama.py  zephyr.py
psilo/dataset/prompts/: annotator_template.txt  filter_refusals.txt  filter_subjective_incomplete.txt  qa_generator_system_prompt.txt
psilo/methods/: cli.py
psilo/methods/encoder/: __init__.py  evaluation.py  training.py
psilo/methods/encoder/utils/: common.py  evaluation.py
psilo/methods/uncertainty/: README.md  evaluation.py  recompute_logits_with_uq.py
psilo/methods/uncertainty/estimators/: claim_conditioned_probability.py  focus.py  greedy_alternatives_nli.py  max_probability.py
psilo/methods/uncertainty/utils/: consts.py  model_templates.py
psilo/prompts/: annotator_system_prompt.txt
psilo/utils/: constants.py  id_generator.py  io.py  openai.py
psiloqa_eval/: evaluator.py
scripts/: eval_script.py  train_script.py
