[project]
name = "psiloqa"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "datasets>=4.1.1",
    "loguru>=0.7.3",
    "numpy<2",
    "openai>=1.109.1",
    "protobuf>=6.32.1",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.11.0",
    "sentencepiece>=0.2.1",
    "torch>=2.8.0",
    "transformers>=4.51.2,<4.53",
    "tokenizers==0.21.0",
    "typer>=0.19.2",
    "wikipedia-api>=0.8.1",
    "spacy>=3.7.0",
    "scikit-learn>=1.7.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]

[tool.ruff]
target-version = "py310"          # or your real target
line-length = 200

extend-exclude = ["data/", ".venv/"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]    # errors, flakes, isort, pyupgrade
ignore = ["UP035"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
